--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">JUAN PÉREZ SOSA</a></h1>
+								<h1><a href="index.html" id="logo">Daniel Abraham Sanchez Esquivel</a></h1>
 								<hr/>
 								<p>DEPLOY EN INSTANCIA AWS</p>
 								<p>UNIVESIDAD TECNOLÓGICA DE DURANGO</p>
-								<a href="#" class="image featured"><img src="images/2.png" width="480" height="380" alt="" /></a>
-
+								<a href="#" class="image featured" style="display: flex; justify-content: center; align-items: center; padding: 20px;">
+									<img src="images/Sanchez_Daniel.jpeg" alt="Jessica Contreras" style="max-width: 30%; height: auto; border-radius: 8px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);" />
+								</a>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
